<resources>
    <string name="app_name">DoSomething</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="card_title">New task!</string>
    <string name="test_content">Садыр Садыр Садыр Садыр Садыр Садыр Садыр Садыр Садыр Садыр Садыр</string>
    <string name="test_link">www.ka4ka.com/learn-java</string>
    <string name="refresh_text">Refresh</string>
    <string name="accept_text">Let\'s GO!</string>
    <string name="share_text">Share</string>
    <string name="invite_text">Invite</string>
</resources>