<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardCornerRadius="@dimen/default_margin"
        app:cardElevation="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/card_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_big_size" />

            <TextView
                android:id="@+id/activity_content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                tools:text="@string/test_content" />

            <TextView
                android:id="@+id/activity_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                tools:text="Sadyr Sadyr" />

            <TextView
                android:id="@+id/activity_link_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:text="@string/test_link"
                android:textColor="@color/link_color" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/refresh_text"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/accept_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/accept_text"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:id="@+id/invite_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/invite_text"
        android:textAllCaps="false" />
</LinearLayout>